smushing fixed but now a bit too much space, title still off centre needs fixing

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -27,8 +27,9 @@ float:left;
 margin-left: 8px;
 font-family: 'Work Sans', sans-serif;
 font-weight: bold;
+text-size-adjust: auto;
 letter-spacing: normal;
-line-height: 2%;
+
 width: 14%;
 border: 15px solid white;
 border-radius: 29%;
@@ -139,6 +140,7 @@ header{
     padding-top: 5%;
     font-family: 'Bebas Neue', cursive;
     letter-spacing: 1px;
+  
 }
 
 .intro{
